--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-buffer_660.bin filter=lfs diff=lfs merge=lfs -text
+buffer_500i.bin filter=lfs diff=lfs merge=lfs -text
+buffer_600.bin filter=lfs diff=lfs merge=lfs -text
+buffer_500i.bin,buffer_660.bin filter=lfs diff=lfs merge=lfs -text
